<resources>
    <string name="app_name">MediaVault</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="DisplayName">Display Name:</string>
    <string name="Email" translatable="false">E-mail:</string>
    <string name="Password">Password:</string>
    <string name="SignUp">Sign Up</string>
    <string name="HasAccount"><u>Already have an account? Sign in!</u></string>
    <string name="SignIn">Sign In</string>
    <string name="NewHere"><u>New here? Then register now!</u></string>
    <string name="Home">Home</string>
    <string name="About">About</string>
    <string name="Playlists">Playlists</string>
    <string name="Albums">Albums</string>
    <string name="Tags">Tags</string>
    <string name="Title">Title</string>
    <string name="homeGreeting">Welcome back</string>
    <string name="Playlists_long">Playlists</string>
</resources>