<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PortraitRegister">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo_lowres_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FirstName"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LastName"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineRightMid"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@+id/guidelineLeftMid"
        app:layout_constraintTop_toBottomOf="@+id/textFirstName"
        />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineRightMid"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/textLastName"
        />

    <TextView
        android:id="@+id/textDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DisplayName"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart2"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <EditText
        android:id="@+id/editDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart2"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd2"
        app:layout_constraintTop_toBottomOf="@+id/textDisplayName"
        />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart2"
        app:layout_constraintTop_toBottomOf="@+id/editDisplayName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart2"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd2"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart2"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:inputType="textPassword"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart2"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd2"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:backgroundTint="#1E3A8A"
        android:text="@string/SignUp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd2"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        />

    <TextView
        android:id="@+id/textHasAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/HasAccount"
        android:textColor="#1E3A8A"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart2"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd2"/>
</androidx.constraintlayout.widget.ConstraintLayout>