<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"

    >

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelEmail" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDisplayName" />

    <EditText
        android:id="@+id/inputSecondName"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputFirstName"
        app:layout_constraintTop_toBottomOf="@id/labelSecondName" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:backgroundTint="#1D3A8A"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/SignUp"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="62dp"
        android:text="@string/SecondName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelFirstName"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <EditText
        android:id="@+id/inputFirstName"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelFirstName" />

    <TextView
        android:id="@+id/labelFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/FirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <!-- Sign Up Button -->

    <!-- Rodapé -->
    <EditText
        android:id="@+id/inputDisplayName"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDisplayName" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="330dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelPassword" />

    <TextView
        android:id="@+id/labelDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/DisplayName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFirstName" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="292dp"
        android:layout_height="117dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="146dp"
        android:src="@drawable/logo_lowres_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/footer"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:text="Already have an account? Sign In!"
        android:textColor="#1D3A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
