<?xml version="1.0" encoding="utf-8"?>
<!--++Added 6thMay2025 16:18-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">


    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo_lowres_dark"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="220dp"
        android:layout_marginStart="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/Email"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/Password"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEmail"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/togglePassword"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="Ver password"
            android:src="@drawable/icon_eye"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toTopOf="@id/password"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:text="@string/SignIn"
        android:backgroundTint="#1E3A8A"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/passwordWrapper"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textNewHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="New Here? Create an account!"
        android:textColor="#1E3A8A"
        app:layout_constraintTop_toBottomOf="@id/passwordWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>